# solus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
CMake/: CSharpLua.cmake  IncludedScripts.cmake  Teal.cmake  Yue.cmake  x64-windows-skse.cmake
include/: PCH.h  SKSEMenuFramework.h  boolinq.hpp  core.h  engine.h  filesystem.h  filesystem.hpp  logger.h  logging.h  logging.hpp  lua_mod.h  lua_mod_manager.h  matchit.h  sol_ext.h  sol_ext.hpp  solus.h  solus.hpp
include/commands/: command.h  lua_cmd.h
include/modules/: fs.hpp  native_module.h  skse_module.hpp  solus_module.hpp  ui_module.hpp
include/modules/imgui/: SKSEMenuFramework.h  imgui_enums.h  imgui_ext.h  imgui_fontawesome.h  imgui_managers.h  imgui_methods.h  imgui_module.h  imgui_types.h
include/ui/: manager.hpp  math.hpp  ui_main.hpp  ui_window.hpp
lib/: array.lua  class.lua  core.lua  example.lua  fmt.lua  fs.lua  json.lua  lib.sln  liquid.lua  logger.lua  match.lua  md5.lua  meta.lua  path.lua  pkg.lua  prettyprint.lua  replace.lua  require.lua  semver.lua  skse.lua  solus.lua  stringsplit.lua  symbol.lua  tablext.lua  ui.lua
lib/SKSE.Core/: Interfaces.cs  MessagingInterface.cs  REL.cs
lib/Solus.Core/: API.cs  Solus.Core.csproj
lib/core/: _core.lua  array.lua  disposable.lua  exception.lua  mod.lua  promise.lua
lib/core/spec/: array_spec.lua  assert.lua
lib/skse/: _skse.lua
lib/solus/: _solus.lua
lib/spec/: array_spec.lua  class_spec.lua  match_spec.lua  path_spec.lua  stringsplit_spec.lua
src/: core.cpp  engine.cpp  logging.cpp  lua_mod.cpp  lua_mod_manager.cpp  plugin.cpp  solus.cpp
src/modules/: solus_module.cpp
src/modules/imgui/: SKSEMenuFramework.cpp  imgui_enums.cpp  imgui_managers.cpp  imgui_methods.cpp  imgui_module.cpp  imgui_types.cpp
